debathena-thirdparty-utilities (1.0) unstable; urgency=low

  * First non-equivs version

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 27 Jul 2011 15:33:51 -0400

debathena-thirdparty-utilities (0.4) unstable; urgency=low

  * Add dosemu

 -- Debathena Project <debathena@mit.edu>  Wed, 03 Feb 2010 17:56:56 -0500

debathena-thirdparty-utilities (0.3.1) unstable; urgency=low

  * Depend mtools instead of recommending mtoolsfm

 -- Debathena Project <debathena@mit.edu>  Tue, 19 May 2009 18:11:45 -0400

debathena-thirdparty-utilities (0.3) unstable; urgency=low

  * Demote mtoolsfm to recommendation

 -- Debathena Project <debathena@mit.edu>  Tue, 19 May 2009 17:33:43 -0400

debathena-thirdparty-utilities (0.2) unstable; urgency=low

  * First version

 -- Debathena Project <debathena@mit.edu>  Tue, 19 May 2009 17:33:27 -0400
