@@ -1,8 +1,10 @@
 debathena-thirdparty-utilities (1.0) unstable; urgency=low
 
   * First non-equivs version
+  * Add dos2unix if it exists
+  * Add rlwrap
 
- -- Jonathan Reed <jdreed@mit.edu>  Wed, 27 Jul 2011 15:33:51 -0400
+ -- Jonathan Reed <jdreed@mit.edu>  Thu, 28 Jul 2011 10:41:15 -0400
 
 debathena-thirdparty-utilities (0.4) unstable; urgency=low
 
